--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ layout: default
   <div class="main-container">
     <h2>We are passionate about helping businesses grow, and we’d love to help yours.</h2>
     <p>We refer to ourselves as “digital media unicorns” because we are skilled in many areas of social media management, brand strategy, blogging for SEO, and more -- just like a unicorn, our skillset is a rare find, and we pride ourselves on the magical results we generate.</p>
+
     <div class="services">
       <h3>We offer assistance with</h3>
       <ul>
@@ -45,6 +46,10 @@ layout: default
   <div class="story__content">
     <h2>Your business is a story, and your customer is the hero. </h2>
     <p>The goal is simple: fight off the bad guys (like low engagement and competitors, to name a few), and complete your quest to increase conversions, relevancy, and revenue. Every good story needs a guide, and Digital Media Unicorn is yours -- we help you filter the noise so you can target the right customers, use the right platforms, work with the right influencers, and ultimately grow your business.</p>
+    <blockquote>
+      <p>Jessica was quickly able to understand the business, better define our target market, and really work to grow our following organically while increasing our platform engagement dramatically. Jessica is highly knowledgeable, very easy to work with, and extremely effective.</p>
+      <h5>Rebecca Cole, CEO, Nurture My Child</h5>
+    </blockquote>
   </div>
   <div class="story__image">
     <img src="/images/tree.jpg" alt="">
@@ -53,7 +58,12 @@ layout: default
 
 <section class="increase">
   <div class="main-container">
-    <h2>If you want to increase your customers and revenue by growing your business digitally, we’re your people.</h2>
-    <p>Whether you’re looking to learn how to manage your own media or are seeking a full or part-time social manager, we’re here to help. Let’s collaborate!</p>
+    <div class="increase__image">
+      <img src="/images/logos.png" alt="">
+    </div>
+    <div class="increase__content">
+      <h2>If you want to increase your customers and revenue by growing your business digitally, we’re your people.</h2>
+      <p>Whether you’re looking to learn how to manage your own media or are seeking a full or part-time social manager, we’re here to help. Let’s collaborate!</p>
+    </div>
   </div>
 </section>
