Mobile styles, thank you, logo

--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@ layout: default
           </li>
         </ul>
       </aside>
-      
+
       <form action="https://getsimpleform.com/messages?form_api_token=502d0bc3cf9f53cc6972a093006953c6" method="post">
-        <input type='hidden' name='redirect_to' value='http://kylefiedler.com/' />
+        <input type='hidden' name='redirect_to' value='http://digitalmediaunicorn.com/thank_you.html' />
         <div>
           <label for="name">Your name</label>
           <input type="text" name="name" />
