--- a/thank_you.html
+++ b/thank_you.html
@@ -1,3 +1,9 @@
 ---
 layout: default
 ---
+
+<div class="main-container">
+  <section class="hero">
+    <h1>Thanks so much for reaching out! We’ll be in touch ASAP.</h1>
+  </section>
+</div>
