--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@ layout: default
       <h3>We offer assistance with</h3>
       <ul>
         <li>Brand Strategy</li>
-        <li>Rebranding</li>
+        <li>Social Media Photography</li>
         <li>Social Media Management</li>
-        <li>Social Media Photography & Content Curation</li>
-        <li>Plus More</li>
+        <li>Rebranding</li>
+        <li>Website & Logo Design</li>
+        <li>Instagram for Small Business Courses</li>
       </ul>
     </div>
   </div>
@@ -45,7 +46,7 @@ layout: default
 <section class="story main-container">
   <div class="story__content">
     <h2>Your business is a story, and your customer is the hero. </h2>
-    <p>The goal is simple: fight off the bad guys (like low engagement and competitors, to name a few), and complete your quest to increase conversions, relevancy, and revenue. Every good story needs a guide, and Digital Media Unicorn is yours -- we help you filter the noise so you can target the right customers, use the right platforms, work with the right influencers, and ultimately grow your business.</p>
+    <p>The goal is simple: fight off the bad guys (like low engagement and competitors, to name a few), and complete your quest to increase conversions, relevancy, and revenue. Every good story needs a guide, and Digital Media Unicorn is yours &mdash; we help you filter the noise so you can target the right customers, use the right platforms, work with the right influencers, and ultimately grow your business.</p>
     <blockquote>
       <p>&rdquo;Jessica was quickly able to understand the business, better define our target market, and really work to grow our following organically while increasing our platform engagement dramatically. Jessica is highly knowledgeable, very easy to work with, and extremely effective.&ldquo;</p>
       <h5>Rebecca Cole, CEO, Nurture My Child</h5>
