--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ layout: default
 
 <section class="grow main-container">
   <div class="grow__content">
-    <h2>We help you digitally grow your business, become more relevant on social media, and ultimately increase your customer conversions.</h2>
-    <p>Just like a unicorn, our skillset is rare &ndash; and the end result is pure magic.</p>
+    <h2>We help you digitally grow your business, become more relevant on social media, and ultimately increase your customer conversions and revenue.</h2>
+    <p>Just like a unicorn, our skill set is rare &ndash; and the end result is pure magic.</p>
     <a href="#">Reach out today for a free consultation</a>
   </div>
 
@@ -20,14 +20,14 @@ layout: default
   </div>
 
   <section class="grow__weare">
-    <h2>We are a digital media agency helping you create a cohesive brand strategy to increase your digital presence and look great doing it. </h2>
+    <h2>We are a mighty team of design, marketing, SEO, and social media experts here to help you grow your brand. Whether you are in the business of marketing yourself as your brand (hello, realtors and photographers!) or you have an e-commerce platform or brick and mortar establishment, we’re here to help you take it to the next level.</h2>
   </section>
 </section>
 
 <section class="passionate">
   <div class="main-container">
     <h2>We are passionate about helping businesses grow, and we’d love to help yours.</h2>
-    <p>We refer to ourselves as “digital media unicorns” because we are skilled in many areas of social media management, brand strategy, blogging for SEO, and more -- just like a unicorn, our skillset is a rare find, and we pride ourselves on the magical results we generate.</p>
+    <p>We refer to ourselves as “digital media unicorns” because we are skilled in many areas of social media management, brand strategy, blogging for SEO, and more -- just like a unicorn, our skill set is a rare find, and we pride ourselves on the magical results we generate.</p>
 
     <div class="services">
       <h3>We offer assistance with</h3>
