Services page and testamonials

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
   <div class="grow__content">
     <h2>We help you digitally grow your business, become more relevant on social media, and ultimately increase your customer conversions and revenue.</h2>
     <p>Just like a unicorn, our skill set is rare &ndash; and the end result is pure magic.</p>
-    <a href="#">Reach out today for a free consultation</a>
+    <a href="#" class="cta"><span>Reach out today for a free consultation</span></a>
   </div>
 
   <div class="grow__image">
@@ -47,10 +47,49 @@ layout: default
   <div class="story__content">
     <h2>Your business is a story, and your customer is the hero. </h2>
     <p>The goal is simple: fight off the bad guys (like low engagement and competitors, to name a few), and complete your quest to increase conversions, relevancy, and revenue. Every good story needs a guide, and Digital Media Unicorn is yours &mdash; we help you filter the noise so you can target the right customers, use the right platforms, work with the right influencers, and ultimately grow your business.</p>
-    <blockquote>
-      <p>&rdquo;Jessica was quickly able to understand the business, better define our target market, and really work to grow our following organically while increasing our platform engagement dramatically. Jessica is highly knowledgeable, very easy to work with, and extremely effective.&ldquo;</p>
-      <h5>Rebecca Cole, CEO, Nurture My Child</h5>
-    </blockquote>
+    
+    <div class="gallery items-4 autoplay">
+      <div id="item-1" class="control-operator"></div>
+      <div id="item-2" class="control-operator"></div>
+      <div id="item-3" class="control-operator"></div>
+      <div id="item-4" class="control-operator"></div>
+
+      <figure class="item">
+        <blockquote>
+          <p>&rdquo;Jessica has the ability and skill level to grasp not only the culture of the company, but also our tone, which is such a critical element when interacting and engaging with customers. She has a vast knowledge base and is constantly striving to gather new relevant data that is applicable to our daily operations. She has a wealth of creativity and brilliant grasp of aesthetics and branding.&ldquo;</p>
+          <h5>Hindi Zeidman, CEO, The Ollie World</h5>
+        </blockquote>
+      </figure>
+
+      <figure class="item">
+        <blockquote>
+          <p>&rdquo;Jessica was quickly able to understand the business, better define our target market, and really work to grow our following organically while increasing our platform engagement dramatically. Jessica is highly knowledgeable, very easy to work with, and extremely effective.&ldquo;</p>
+          <h5>Rebecca Cole, CEO, Nurture My Child</h5>
+        </blockquote>
+      </figure>
+
+      <figure class="item">
+        <blockquote>
+          <p>&rdquo;Jessica knows her stuff and has been a tremendous asset to my business. It has been invaluable to have her taking the lead on my social media and online marketing endeavors so I have more time to get to what I want to be focusing on. Jessica and her team have a passion for their work and I very much enjoy collaborating with them.&ldquo;</p>
+          <h5>Norah Levine, Norah Levine Photography, Owner</h5>
+        </blockquote>
+      </figure>
+
+      <figure class="item">
+        <blockquote>
+          <p>&rdquo;Jessica really cares about her clients and it shows in everything she does. She delivers exactly what you ask for - and often goes the extra mile to exceed expectations. Her work is of the highest caliber and she is an asset to any company lucky enough to find her.&ldquo;</p>
+          <h5>Casey Powers, CEO, Ecocentric Mom</h5>
+        </blockquote>
+      </figure>
+
+      <div class="controls">
+        <a href="#item-1" class="control-button">•</a>
+        <a href="#item-2" class="control-button">•</a>
+        <a href="#item-3" class="control-button">•</a>
+        <a href="#item-4" class="control-button">•</a>
+      </div>
+    </div>
+
   </div>
   <div class="story__image">
     <img src="/images/tree.jpg" alt="">
